--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/NewBuild.loader.js";
+      var loaderUrl = buildUrl + "/3DPOC.loader.js";
       var config = {
-        dataUrl: buildUrl + "/NewBuild.data",
-        frameworkUrl: buildUrl + "/NewBuild.framework.js",
-        codeUrl: buildUrl + "/NewBuild.wasm",
+        dataUrl: buildUrl + "/3DPOC.data",
+        frameworkUrl: buildUrl + "/3DPOC.framework.js",
+        codeUrl: buildUrl + "/3DPOC.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Jayant",
         productName: "ProofOfConcept3D2",
